--- a/src/index.css
+++ b/src/index.css
@@ -218,7 +218,7 @@ button:active {
   color: white;
 }
 .logo {
-  padding: 30%;
+  padding: 30%
 
 }
 
@@ -276,4 +276,18 @@ header {
 
 .no-cursor {
   cursor: not-allowed;
+}
+
+@media (max-width: 550px) {
+  
+    .btn {
+        display: block;
+        font-size: 20px;
+    }
+
+    .AppName {
+    font-size: 20px;
+    
+  }
+
 }
